<resources>
    <string name="app_name">Coffee</string>
    <string name="toppings">Toppings</string>
    <string name="notice">Coffee $5.0, Whipped Cream $1.0, Chocolate $2.0</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="remarks">Remarks optional</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="init_quantity">2</string>
    <string name="init_total_price">$10.0</string>
    <string name="order_info">Order Info</string>
    <string name="order">Order</string>
    <string name="nothing">Nothing</string>
    <string name="extra_subject">Coffee Order</string>
    <string name="order_summary"> Order Number: %1$8d\nToppings: %2$8s\nRemarks: %3$8s\nQuantity: %4$8d\nTotal Price: $%5$8.1f\n\nThanks!</string>
</resources>